--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </li>
               
               <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
+                <a class="nav-link" href="productos.html">Productos</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
