--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-          <img src="/Tienda Instru/tienda/Imagenes/logo.png" alt="" width="50" height="40">
+          <a class="navbar-brand" href="/TiendaProyect/index.html">
+          <img src="/TiendaProyect/Imagenes/logo.png" alt="" width="50" height="40">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -23,17 +23,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="/TiendaProyect/index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="/TiendaProyect/contacto.html">Contacto</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="/TiendaProyect/nosotros.html">Nosotros</a>
               </li>
               
               <li class="nav-item">
-                <a class="nav-link" href="productos.html">Productos</a>
+                <a class="nav-link" href="/TiendaProyect/productos.html">Productos</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -80,7 +80,7 @@
         <!-- Logo -->
 
         <div class="col-12 col-md-4">
-          <img src="/Tienda Instru/tienda/Imagenes/logo.png" alt="" width="150" height="150">
+          <img src="/TiendaProyect/Imagenes/logo.png" alt="" width="150" height="150">
         </div>
 
         <!-- Información de contacto -->
